# habi

./: .gitignore  README.md
like/: event.sql
number/: main.py
query/: main.py  pyproject.toml  requirements.txt
query/src/: db.py
query/src/controller/: query_controller.py
query/src/model/: query_repository.py
query/src/service/: query_service.py
query/test/: test_service.py
